--- a/news.html
+++ b/news.html
@@ -4,6 +4,30 @@
     <style>
         * {
             font-family: "American Typewriter", serif;
+            background-color: rgb(40, 120, 50);
+        }
+        h2 {
+            text-align: center;
+            box-shadow: 5px 5px 5px 5px rgb(41, 165, 58);
+            background-color: rgb(41, 165, 58);
+            margin-right: 3%;
+            margin-bottom: 5%;
+        }
+        ul {
+            margin: 0;
+            padding: 0;
+        }
+        li {
+            box-shadow: 5px 5px 5px 5px rgb(41, 165, 58);
+            background-color: rgb(41, 165, 58);
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            margin-top: 1%;
+            margin-right: 3%;
+        } 
+        h3, p, b, a {
+            background-color: rgb(41, 165, 58);
         }
     </style>
 <head>
@@ -11,8 +35,9 @@
 </head>
 
 <body>
-    <h2>NEWS | 06.07.2018 | 23:32:</h2>
+    <h2>NEWS:</h2>
     <ul>
+        <li><h3>06.07.2018 | 23:32</h3></li>
         <li>
             <h3>Introducing Modifications.</h3>
             <p>Today I added the new Modding-Feature. On the Menuscreen, there's now a link to the description. In the Description,
