--- a/createImage.html
+++ b/createImage.html
@@ -119,6 +119,15 @@
                 width: 90%;
                 margin: 0 auto 0 auto;
             }
+
+            .menu-operation-buttons {
+                width: 60%; 
+            }
+
+            .menu-operation-buttons:focus,
+            .menu-operation-buttons:hover {
+                width: 50%;
+            }
         }
     </style>
 </head>
