--- a/news.html
+++ b/news.html
@@ -37,7 +37,7 @@
 <body>
     <h2>NEWS:</h2>
     <ul>
-        <li><h3>06.07.2018 | 23:32</h3></li>
+        <li><h3>13.07.2018 | 22:33</h3></li>
         <li>
             <h3>Introducing Modifications.</h3>
             <p>Today I added the new Modding-Feature. On the Menuscreen, there's now a link to the description. In the Description,
@@ -53,10 +53,10 @@
         </li>
 
         <li>
-            <h3>We now have a Patreon-Page!</h3>
+            <h3>I now have a Patreon-Page!</h3>
             <p>
                 To get some money, for paying the server and some other things for
-                <b>RecursiveLaughter</b>, we created a Patreon-Page. Click
+                <b>RecursiveLaughter</b>, I created a Patreon-Page. Click
                 <a target="_blank" href="https://www.patreon.com/rela">here</a> to visit our Patreon-Page.
             </p>
         </li>
@@ -64,7 +64,14 @@
         <li>
             <h3>This News-Feed.</h3>
             <p>
-                To have a better look at all the new featues, we created this News-Feed. Here're all new Informations and Stats to <b>RecursiveLaughter</b>.
+                To have a better look at all the new featues, I created this News-Feed. Here're all new Informations and Stats to <b>RecursiveLaughter</b>.
+            </p>
+        </li>
+
+        <li>
+            <h3>Reworking Bugs</h3>
+            <p>
+                I fixed some Bugs and reworked some minor Features.
             </p>
         </li>
     </ul>
