--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
                 <h2 style="margin-top: 5px; margin-bottom: 5px;">Get in Contact!</h2>
 
                 <div style="display: flex; justify-content: space-around;text-align: center;">
-                    <a style="display: inline-block; width: 3em; height: 3em; background-size: 100% 100%; background-image: url('https://cdn.pixabay.com/photo/2017/06/22/14/23/twitter-2430933_960_720.png')" href="https://discord.gg/b5Bum5E"></a>
-                    <a style="display: inline-block; width: 3em; height: 3em; background-size: 100% 100%; background-image: url('https://cdn.pixabay.com/photo/2016/09/17/07/03/instagram-1675670_960_720.png')" href="https://www.instagram.com/recursivelaughter/"></a>
-                    <a style="display: inline-block; width: 3em; height: 3em; background-size: 100% 100%; background-image: url('https://cdn.pixabay.com/photo/2017/06/22/14/23/twitter-2430933_960_720.png')" href="https://twitter.com/unreal_guthrie"></a>
-                    <a style="display: inline-block; width: 3em; height: 3em; background-size: 100% 100%; background-image: url('https://cdn.pixabay.com/photo/2017/08/05/11/24/logo-2582757_960_720.png')" href="https://github.com/unrealGuthrie/rela"></a>
-                    <a style="display: inline-block; width: 3em; height: 3em; background-size: 100% 100%; background-image: url('https://upload.wikimedia.org/wikipedia/commons/9/94/Patreon_logo.svg')" href="https://patreon.com/rela"></a>
+                    <a style="display: inline-block; width: 3em; height: 3em; background-size: 100% 100%;" href="https://discord.gg/b5Bum5E"></a>
+                    <a style="display: inline-block; width: 3em; height: 3em; background-size: 100% 100%;" href="https://www.instagram.com/recursivelaughter/"></a>
+                    <a style="display: inline-block; width: 3em; height: 3em; background-size: 100% 100%;" href="https://twitter.com/unreal_guthrie"></a>
+                    <a style="display: inline-block; width: 3em; height: 3em; background-size: 100% 100%;" href="https://github.com/unrealGuthrie/rela"></a>
+                    <a style="display: inline-block; width: 3em; height: 3em; background-size: 100% 100%;" href="https://patreon.com/rela"></a>
                 </div>
             </div>
         </div>
