--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <li class="window-title">Menu:</li>
                     </ul>
                     <div class="window-content" style="height: 94%; padding: 1em 0;">
-                        <button style="display: block; width: 90%;" class="init-buttons center-element" onclick="saveGameToJSON();">Save Game!</button>
+                        <button style="display: block; width: 90%;" class="init-buttons center-element" onclick="saveGameToJSONFile();">Save Game!</button>
                         <button style="display: block; width: 90%;" class="init-buttons center-element" onclick="window.location.reload();">Exit</button>
 
                         <!-- <div>
