--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </button>
                 </div>
 
-                <input onchange="loadJSONFile(this.files[0]);" accept=".json" type="file" id="loadFileInput" style="width: 0.1px;height: 0.1px;opacity: 0;overflow: hidden;position: absolute;z-index: -1;"
+                <input onchange="loadJSONFile(this.files[0]);" accept="application/json" type="file" id="loadFileInput" style="width: 0.1px;height: 0.1px;opacity: 0;overflow: hidden;position: absolute;z-index: -1;"
                 />
                 <p id="loadingMessages"></p>
             </div>
