--- a/index.html
+++ b/index.html
@@ -205,5 +205,5 @@
     </div>
 
     <script src="/resource.js"></script>
-    <script src='/game.js'></script>
+    <script src="/application.js"></script>
 </body>
