--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body oncontextmenu="return (false);">
-    <div id="load" class="whole-window window-frame">
+    <div id="load" class="whole-window window-frame" style="display: none;">
         <span id="loadingAnimationDiv">
             <div id="loadingAnimation"></div>
             Loading...
