--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
 </head>
 
 <body oncontextmenu="return (false);">
-    <div id="load" class="whole-window window-frame" style="display: none;">
-        <span id="loadingAnimationDiv">
-            <div id="loadingAnimation"></div>
-            Loading...
-        </span>
+    <div id="load" class="whole-window window-frame">
+        <div id="loadingAnimation"></div>
+        Loading...
     </div>
 
     <div id="initial" class="whole-window window-frame" style="display: none;">
@@ -77,7 +75,7 @@
                     </button>
                 </div>
 
-                <input onchange="loadJSONFile(this.files[0]);" accept="application/json" type="file" id="loadFileInput" style="width: 0.1px;height: 0.1px;opacity: 0;overflow: hidden;position: absolute;z-index: -1;"
+                <input onchange="loadJSONFile(this.files[0]);" accept="application/json" type="file" id="loadFileInput"
                 />
                 <p id="loadingMessages"></p>
             </div>
